# spin_point

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init-db.sql  manage.py  pyproject.toml  requirements.txt
additions/: admin.py  models.py  urls.py  views.py
additions/migrations/: 0001_initial.py
clubs/: admin.py  forms.py  models.py  urls.py  views.py
clubs/migrations/: 0001_initial.py  0002_initial.py
events/: forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py  0002_initial.py
games/: admin.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_initial.py
news/: admin.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_initial.py
players/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
players/migrations/: 0001_initial.py
static/css/: style.css
templates/: base.html  paginator.html  paginator_with_filter.html
templates/clubs/: add_to_potential_members.html  approve_or_reject_potential_member.html  approve_or_reject_potential_news.html  club.html  club_card.html  club_menu.html  club_news_detail.html  club_news_list.html  club_participants.html  club_potential_members.html  club_potential_news.html  club_template.html  clubs_list.html  create_club.html  edit_club.html  index.html
templates/events/: ajax_invitation_one_player.html  event.html  (+4 more)
tournaments/: admin.py  models.py  urls.py  views.py
ttennis/: asgi.py  settings.py  urls.py  wsgi.py
utils/: general.py  players_filters.py
(+22 files in other folders)
